--- a/client/styles/chat/index.scss
+++ b/client/styles/chat/index.scss
@@ -3,6 +3,18 @@
 .all-chats {
   margin-top: 20px;
 
+  .empty-message {
+    display: block;
+    margin: 0 auto;
+    margin-top: 25px;
+    font-size: 20px;
+
+    a {
+      color: blueviolet;
+      border-bottom: 1px dashed #6d6fd3;
+    }
+  }
+
   .chat-list {
     overflow-y: scroll;
     scrollbar-width: none;
