--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 
-@import "./Home-page/home-page.scss";
+@import "./Home-page/index.scss";
 @import "./shared/index.scss";
 @import "./user-profile/index.scss";
 @import "./chat/index.scss";
+@import "./friends/index.scss";
+@import "./photos/index.scss";
+@import "./bookmarks/index.scss";
+
 
 * {
   font-family: 'Comfortaa', cursive;
@@ -12,4 +16,11 @@
 a {
   text-decoration: none;
   color: #000;
+}
+
+// the whole layout container
+.container {
+  background-color: #f5f5f5;
+  padding: 0 5%;
+  padding-top: 60px;
 }
