--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -7,6 +7,7 @@
 @import "./friends/index.scss";
 @import "./photos/index.scss";
 @import "./bookmarks/index.scss";
+@import "./profile/index.scss";
 
 
 * {
