--- a/client/styles/shared/header.scss
+++ b/client/styles/shared/header.scss
@@ -2,18 +2,17 @@
 .main-header {
     padding-top: 20px;
 
+    /* the navbar before scrolling down */
     .MuiPaper-elevation0 {
         margin-top: 20px;
     }
 
+    /* the fixed navbar itself */
     .MuiAppBar-positionFixed {
         transition: all ease-in-out .3s;
         max-width: 90% !important;
         right: unset;
         left: unset;
-    }
-
-    .MuiToolbar-root {
 
         /* header link */
         a {
